docs: 参考文献を挿入

--- a/midterm-annoucement/02_fundamental_theory.tex
+++ b/midterm-annoucement/02_fundamental_theory.tex
@@ -3,3 +3,5 @@
 研究する上で必要な基礎理論を説明する．
 例えば，伝送路推定方式の検討を行う場合，まずフェージングの種類の話をしたり，
 想定する通信方式の話をしたりする．
+\subsection{直交周波数分割多重}
+直交周波数分割多重 (Orthogonal Frequency Division Multiplexing: OFDM) は，高速伝送を実現するための技術の一つである．OFDMには，以下の3つの要求条件が設定されている\cite{5gtextbook}． (ここからは省略)
