docs: ファイルを結合

--- a/midterm-annoucement/template.tex
+++ b/midterm-annoucement/template.tex
@@ -77,6 +77,10 @@
 % 読み込むときは，拡張子はいらない．ただ，章ごとに分けてもちゃんと
 % ファイル名は.texと末尾につけてtexファイルであることを明示すること．
 \input{01_introduction}
+\input{02_fundamental_theory}
+\input{03_research}
+\input{04_summary}
+\input{05_prospects}
 % (ここまで)=====
 
 % 参考文献
