docs: テキストの高さを修正

--- a/LuaLaTeX/graduation-thesis/template.tex
+++ b/LuaLaTeX/graduation-thesis/template.tex
@@ -43,17 +43,17 @@
 % ---
 
 % 余白の設定 ---
-\setlength{\mathindent}{3zw} % 数式のインデントを設定
+\setlength{\mathindent}{3\zw} % 数式のインデントを設定
 \setlength{\topmargin} {0cm} % 上マージンをゼロに
 \iftombow
     \addtolength{\topmargin}{0cm} % トンボ付きの場合の調整
 \else
     \addtolength{\topmargin}{-1truein} % トンボなしの場合の調整
 \fi
-\setlength{\textheight}   {45\baselineskip} % テキストの高さ（行基準）
+\setlength{\textheight}   {40\baselineskip} % テキストの高さ（行基準）
 \addtolength{\textheight} {\topskip} % 行の余白分を追加
 \setlength{\oddsidemargin}{-15pt} % 偶数ページの余白
-\setlength{\textwidth}    {50zw} % テキストの幅（文字単位）
+\setlength{\textwidth}    {50\zw} % テキストの幅（文字単位）
 % ---
 
 % ページスタイルの設定 ---
