docs: 上の余白を0.6cmに調整

--- a/graduation-thesis/template.tex
+++ b/graduation-thesis/template.tex
@@ -40,7 +40,7 @@
 
 % 余白の設定 ---
 \setlength{\mathindent}{3zw} % 数式のインデントを設定
-\setlength{\topmargin} {0cm} % 上マージンをゼロに
+\setlength{\topmargin} {0.6cm} % 上余白を0.6cmに設定
 \iftombow
     \addtolength{\topmargin}{0cm} % トンボ付きの場合の調整
 \else
