--- a/LuaLaTeX/graduation-thesis/template.tex
+++ b/LuaLaTeX/graduation-thesis/template.tex
@@ -44,7 +44,7 @@
 
 % 余白の設定 ---
 \setlength{\mathindent}{3\zw} % 数式のインデントを設定
-\setlength{\topmargin} {0cm} % 上マージンをゼロに
+\setlength{\topmargin} {0.6cm} % 上の余白を0.6cmに設定
 \iftombow
     \addtolength{\topmargin}{0cm} % トンボ付きの場合の調整
 \else
