--- a/LuaLaTeX/seminar/template.tex
+++ b/LuaLaTeX/seminar/template.tex
@@ -44,7 +44,7 @@
 % ---
 
 % 余白の設定 ---
-\setlength{\mathindent}{3zw} % 数式のインデントを設定
+\setlength{\mathindent}{3\zw} % 数式のインデントを設定
 \setlength{\topmargin} {0cm} % 上マージンをゼロに
 \iftombow
     \addtolength{\topmargin}{0cm} % トンボ付きの場合の調整
@@ -54,7 +54,7 @@
 \setlength{\textheight}   {45\baselineskip} % テキストの高さ（行基準）
 \addtolength{\textheight} {\topskip} % 行の余白分を追加
 \setlength{\oddsidemargin}{-15pt} % 偶数ページの余白
-\setlength{\textwidth}    {50zw} % テキストの幅（文字単位）
+\setlength{\textwidth}    {50\zw} % テキストの幅（文字単位）
 % ---
 
 % ページスタイルの設定 ---
