docs: 単位ミスを修正

--- a/LuaLaTeX/midterm-announcement/template.tex
+++ b/LuaLaTeX/midterm-announcement/template.tex
@@ -28,7 +28,7 @@
 \usetikzlibrary{shapes, positioning}
 
 % 余白の設定 ---
-\setlength{\mathindent}{3zw}
+\setlength{\mathindent}{3\zw}
 \setlength{\topmargin} {0cm}
 \iftombow
     \addtolength{\topmargin}{0cm}
@@ -38,7 +38,7 @@
 \setlength{\textheight}   {45\baselineskip}
 \addtolength{\textheight} {\topskip}
 \setlength{\oddsidemargin}{-15pt}
-\setlength{\textwidth}    {50zw}
+\setlength{\textwidth}    {50\zw}
 
 % ページスタイルの設定 ---
 \pagestyle{empty}
